Re wrote the schema and added OAuth authentication method

--- a/src/pages/signin/index.astro
+++ b/src/pages/signin/index.astro
@@ -11,6 +11,8 @@ export const prerender = false;
             <label for="password">Password</label>
             <input id="password" name="password" />
             <button>Continue</button>
+            <a href="/signin/github">Sign in with Github</a>
         </form>
+        
     </body>
 </html>
