Fixed schema related bugs and created alias for easier imports

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -22,6 +22,7 @@ const session = Astro.locals.session;
 			<main>
 				<h1>Welcome to Astro!</h1>
 				<a href="/signin">Signin</a>
+				<a href="/signup">Signup</a>
 			</main>
 		)
 	}
